--- a/.github/workflows/dismiss.yaml
+++ b/.github/workflows/dismiss.yaml
@@ -38,4 +38,4 @@ jobs:
         uses: actions/setup-go@v2
         # Run "dismiss-runs" subcommand on bot.
       - name: Dismiss
-        run: cd .github/workflows && go run cmd/main.go --token=${{ secrets.GITHUB_TOKEN }} dismiss-runs
+        run: cd .github/workflows/ci && go run cmd/main.go --token=${{ secrets.GITHUB_TOKEN }} dismiss-runs
