--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -35,6 +35,8 @@ jobs:
       # attacker from submitting their own review assignment logic. 
       - name: Checkout master branch 
         uses: actions/checkout@master
+        with:
+          ref: master 
       - name: Installing the latest version of Go.
         uses: actions/setup-go@v2
         # Run "check-reviewers" subcommand on bot.
