change checkout version from master to v2

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -34,7 +34,7 @@ jobs:
       # Checkout master branch of Teleport repository. This is to prevent an
       # attacker from submitting their own review assignment logic. 
       - name: Checkout master branch 
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
           ref: master 
       - name: Installing the latest version of Go.
