--- a/.drone.yml
+++ b/.drone.yml
@@ -3773,7 +3773,7 @@ steps:
       - aws s3 cp s3://$AWS_S3_BUCKET/teleport/$${S3_PATH}teleport-v$${VERSION}-linux-amd64-bin.tar.gz /go/src/github.com/gravitational/teleport/assets/aws/files
 
   - name: Build OSS AMIs
-    image: hashicorp/packer
+    image: hashicorp/packer:1.7.6
     environment:
       AWS_ACCESS_KEY_ID:
         from_secret: AWS_PACKER_ACCESS_KEY_ID
@@ -3876,7 +3876,7 @@ steps:
       - aws s3 cp s3://$AWS_S3_BUCKET/teleport/$${S3_PATH}teleport-ent-v$${VERSION}-linux-amd64-fips-bin.tar.gz /go/src/github.com/gravitational/teleport/assets/aws/files
 
   - name: Build Enterprise AMIs
-    image: hashicorp/packer
+    image: hashicorp/packer:1.7.6
     environment:
       AWS_ACCESS_KEY_ID:
         from_secret: AWS_PACKER_ACCESS_KEY_ID
@@ -4367,6 +4367,6 @@ volumes:
       name: drone-s3-debrepo-pvc
 ---
 kind: signature
-hmac: 4a3df7fd7a3d608a741d11981e4fb7bcfb558630e4d90aef713837510160c365
+hmac: 3ba76e3c07bd461f609320f396cca4e3bea86fdf90bfbd60f0c264ae9e4ebe2f
 
 ...
