--- a/lib/srv/desktop/rdp/rdpclient/Cargo.toml
+++ b/lib/srv/desktop/rdp/rdpclient/Cargo.toml
@@ -7,6 +7,15 @@ edition = "2018"
 [lib]
 crate-type = ["staticlib"]
 
+[profile.dev]
+debug = 1
+lto = "off"
+
+[profile.release]
+debug = 1
+lto = "thin"
+codegen-units = 1
+
 [dependencies]
 bitflags = "1.3.2"
 byteorder = "1.4.3"
