Fixes lint error.
Signed-off-by: Gus Luxton <gus@goteleport.com>

--- a/examples/chart/teleport-cluster/templates/certificate.yaml
+++ b/examples/chart/teleport-cluster/templates/certificate.yaml
@@ -16,6 +16,6 @@ spec:
     kind: {{ required "highAvailability.certManager.issuerKind is required in chart values" .Values.highAvailability.certManager.issuerKind }}
   {{- with .Values.annotations.certSecret }}
   secretTemplate:
-    annotations: {{ toYaml . | nindent 6 }}
+    annotations: {{- toYaml . | nindent 6 }}
   {{- end }}
 {{- end }}
