--- a/lib/srv/desktop/rdp/rdpclient/Cargo.toml
+++ b/lib/srv/desktop/rdp/rdpclient/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rdp-client"
 version = "0.1.0"
-authors = ["Andrew Lytvynov <andrew@goteleport.com>"]
+authors = ["Andrew Lytvynov <andrew@goteleport.com>", "Zac Bergquist <zac@goteleport.com>"]
 edition = "2018"
 
 [lib]
@@ -25,9 +25,6 @@ libc = "0.2.106"
 log = "0.4.14"
 num-derive = "0.3.3"
 num-traits = "0.2.14"
-# Ideally, we'd use RustCrypto/RSA instead of linking OpenSSL. Unfortunately,
-# RustCrypto doesn't expose the low-level primitives we need for the smartcard
-# challenge signing (see src/piv.rs for details).
-openssl = { version = "0.10.38", features = ["vendored"] }
+rsa = { version = "0.5.0", features = ["alloc"] }
 rdp-rs = { git = "https://github.com/gravitational/rdp-rs", rev = "755e950dcff0fc6965aa518c4596b995ede3417d" }
 uuid = { version = "0.8.2", features = ["v4"] }
